RESOLVED FIXED 69167
[CSS3 Regions] Fix some bugs in width and offset computation in variable width regions
https://bugs.webkit.org/show_bug.cgi?id=69167
Summary [CSS3 Regions] Fix some bugs in width and offset computation in variable widt...
Dave Hyatt
Reported 2011-09-30 13:43:59 PDT
Specifically overflow issues and directionality bugs.
Attachments
Patch (337.05 KB, patch)
2011-09-30 13:51 PDT, Dave Hyatt
sam: review+
Dave Hyatt
Comment 1 2011-09-30 13:51:45 PDT
Dave Hyatt
Comment 2 2011-10-04 00:34:58 PDT
Fixed. Forgot to resolve.
Note You need to log in before you can comment on or make changes to this bug.